Replace dropwizard-util collection wrappers with JCL (#4914)
We can use the JCL collections helpers to replace these utility classes.

Remove:

- io.dropwizard.util.Lists
- io.dropwizard.util.Maps
- io.dropwizard.util.Sets